Minor Bug Fix :: Update
- Fixed font size for the dropdowns.
- Fixed node lines to avoid overlapping.
- Fixed an issue where dropdowns were generating console errors.
- Updated border radius on dropdowns

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,9 +9,6 @@
 
 //Variables
 $border-color: #ed6c44;
-* {
-    font-size: 26px;
-}
 html,
 body {
     font-family: "Nunito", sans-serif;
@@ -80,10 +77,7 @@ body {
     margin-top: 3px;
     padding: 0px;
 }
-// .initial-rule-card {
-//     margin-top: 6%;
-//     margin-left: 5%;
-// }
-// .rule-card {
-//     margin-left: 5%;
-// }
+.form-control {
+    font-size: 1.5rem;
+    border-radius: 1.3rem;
+}
